examples/fail/semantic/unknown_variable.bina
// EXPECT_SEMANTIC_ERROR: symbol 'x' not found
fn main() -> int {
    return x;
}
